[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/main-menu2.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/Hardpixel.OTF" type="DynamicFontData" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 111, 15, 50, 50 )

[sub_resource type="DynamicFont" id=10]
size = 44
font_data = ExtResource( 4 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 6, 15, 33, 10 )

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = ExtResource( 4 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 6, 15, 33, 10 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 6, 15, 33, 10 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 303, 63, 50, 34 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 4 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 305, 37, 22, 9 )

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 4 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenuTexture" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -250.0
margin_right = 250.0
margin_bottom = 250.0
rect_min_size = Vector2( 500, 500 )
texture = SubResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PauseMenuTexture"]
anchor_right = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -70.0
margin_bottom = 88.0
rect_min_size = Vector2( 430, 70 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Paused"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="TextureButton" parent="PauseMenuTexture"]
margin_left = 80.0
margin_top = 130.0
margin_right = 375.0
margin_bottom = 230.0
rect_min_size = Vector2( 340, 100 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
texture_normal = SubResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PauseMenuTexture/ContinueButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Continue"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="TextureButton" parent="PauseMenuTexture"]
pause_mode = 2
margin_left = 80.0
margin_top = 250.0
margin_right = 375.0
margin_bottom = 283.0
rect_min_size = Vector2( 340, 100 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
texture_normal = SubResource( 5 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PauseMenuTexture/OptionsButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Options"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="TextureButton" parent="PauseMenuTexture"]
margin_left = 80.0
margin_top = 370.0
margin_right = 375.0
margin_bottom = 331.0
rect_min_size = Vector2( 340, 100 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
texture_normal = SubResource( 6 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PauseMenuTexture/MainMenuButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Main Menu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningScreen" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -170.0
margin_right = 250.0
margin_bottom = 170.0
rect_min_size = Vector2( 500, 340 )
texture = SubResource( 7 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningLabel" type="Label" parent="WarningScreen"]
margin_left = 30.0
margin_top = 30.0
margin_right = 440.0
margin_bottom = 173.0
rect_min_size = Vector2( 440, 160 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Warning: You will lose your progress on this level if you quit now!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="WarningScreen"]
margin_left = 20.0
margin_top = 210.0
margin_right = 240.0
margin_bottom = 290.0
rect_min_size = Vector2( 220, 90 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
texture_normal = SubResource( 8 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="WarningScreen/BackButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Back"
align = 1
valign = 1

[node name="WarningMenuButton" type="TextureButton" parent="WarningScreen"]
margin_left = 260.0
margin_top = 210.0
margin_right = 470.0
margin_bottom = 300.0
rect_min_size = Vector2( 220, 90 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
texture_normal = SubResource( 8 )
expand = true
stretch_mode = 5
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="WarningScreen/WarningMenuButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Main Menu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PauseMenuTexture/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="PauseMenuTexture/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="PauseMenuTexture/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="WarningScreen/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="WarningScreen/WarningMenuButton" to="." method="_on_WarningMenuButton_pressed"]
